--- a/apps/web/.env
+++ b/apps/web/.env
@@ -18,3 +18,4 @@ REACT_APP_UNISWAP_BASE_API_URL="https://interface.gateway.uniswap.org/"
 REACT_APP_UNISWAP_GATEWAY_DNS="https://interface.gateway.uniswap.org/v2"
 REACT_APP_UNITAGS_API_URL="https://gateway.uniswap.org/v2/unitags"
 REACT_APP_WALLET_CONNECT_PROJECT_ID="c6c9bacd35afa3eb9e6cccf6d8464395"
+TEST_CHAIN_ID='31337'
