--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,3 @@
 files:
   - source: /apps/web/src/locales/en-US.po
-    translation: /%original_path%/%language%.po
+    translation: /%original_path%/%three_letters_code%.po
